Fixed color contrast accessibility issue

--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -1,5 +1,6 @@
 $backgrounds: rgb(0,0,0) rgb(255,255,255);
 $accent-color: rgb(176, 189, 253);
+$accent-color-dark: rgb(129, 138, 184);
 $secondary: rgb(255,205,113);
 $shadow: rgba(0, 0, 0, .4);
 $header-height: 5.7rem;
